flextrack-eks-cluster-eso/amqp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq-container
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
          name: amqp
        - containerPort: 15672
          name: management
        - containerPort: 15692
          name: metrics
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"   # 0.15 vCPU
          limits:
            memory: "512Mi"
            cpu: "500m"   # 0.5 vCPU

        livenessProbe:
          exec:
            command:
            - rabbitmq-diagnostics
            - -q
            - ping
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command:
            - rabbitmq-diagnostics
            - -q
            - check_port_connectivity
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        # Optional: Add volume mount for data persistence
        # volumeMounts:
        # - name: rabbitmq-data
        #   mountPath: /var/lib/rabbitmq
      # Optional: Add persistent volume
      # volumes:
      # - name: rabbitmq-data
      #   persistentVolumeClaim:
      #     claimName: rabbitmq-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq-proxy
spec:
  ports:
  - name: amqp
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: management
    port: 15672
    protocol: TCP
    targetPort: 15672
  - name: metrics
    port: 15692
    protocol: TCP
    targetPort: 15692
  selector:
    app: rabbitmq  # must match the label in the Pod and immutable after creation
  type: ClusterIP
