flextrack-eks-cluster-eso/db.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  labels:
    app: postgres
  annotations:
    reloader.stakater.com/auto: "true"  # Auto-restart when any secret/configmap changes
    # OR use specific secret monitoring:
    # secret.reloader.stakater.com/reload: "mongodb-secret"
spec:
  serviceName: postgres-headless
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-container
        image: postgres:14
        ports:
        - containerPort: 5432
        
        # ✅ ADDED: Database Resources
        # Postgres needs guaranteed RAM to be stable.
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"

        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
           # ✅ CRITICAL FIX: Mount into a subdirectory to ignore lost+found
          subPath: pgdata
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: gp3 # adjust based on your k8s setup
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-database
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
