flextrack-eks-cluster-eso/expenses.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: expenses
  name: expenses-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses
  strategy: {}
  template:
    metadata:
      labels:
        app: expenses # must match the label in the Pod template and immutable after creation
    spec:
      containers:
      - image: mrnanda/expenses:20587449564
        name: app-container

        # ✅ ADDED: Go App Resources
        # Go apps are lightweight. 64Mi request is very safe.
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
            
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50051
          name: grpc
        readinessProbe:
          httpGet:
            path: /v1/healthcheck
            port: 8080
        livenessProbe:
          httpGet:
            path: /v1/healthcheck
            port: 8080
        startupProbe:
          httpGet:
            path: /v1/healthcheck
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: expenses
  name: expenses-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: grpc
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: expenses
  type: ClusterIP
