flextrack-eks-cluster-eso/mailer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mailer
  name: mailer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailer
  strategy: {}
  template:
    metadata:
      labels:
        app: mailer
    spec:
      containers:
      - image: mrnanda/mailer:20591593349
        name: app-container
        ports:
        - containerPort: 8080
        
         # ✅ ADDED: Mailer Resources
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
            
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mailer
  name: mailer-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mailer
  type: ClusterIP
