flextrack-eks-cluster-eso/notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notifier
  name: notifier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifier # must match the label in the Pod template and immutable after creation
  strategy: {}
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
      - image: mrnanda/notifier:20591903285
        name: app-container
        ports:
        - containerPort: 8080
        
          # ✅ ADDED: Notifier Resources
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
            
        readinessProbe:
          httpGet:
            path: /v1/healthcheck
            port: 8080
        livenessProbe:
          httpGet:
            path: /v1/healthcheck
            port: 8080
        startupProbe:
          httpGet:
            path: /v1/healthcheck
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notifier
  name: notifier-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: notifier
  type: ClusterIP
